@@ -413,6 +413,7 @@ All (GUI):
 - wxPropertyGrid: added wxPG_NO_INTERNAL_BORDER, wxPG_EX_NO_TOOLBAR_DIVIDER
   and wxPG_EX_TOOLBAR_SEPARATOR styles for finer control over borders.
   Borders around property grid are now native for consistency.
+- Added wxXmlResource::LoadObjectRecursively().
 
 GTK:
 
